# create_EKG

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  create_ekg_v2.py  primesoft_create_ekg_v2.py  pyproject.toml  requirements.txt  start.sh
api/: compat.py  google_drive.py  main.py  security.py  session.py  settings.py  vector_store.py
api/static/css/: styles.css
api/static/js/: admin.js
api/templates/: admin_dashboard.html  layout.html  login.html
tests/: test_utils.py
